Closed Bug 1311715 Opened 8 years ago Closed 8 years ago

Fix assert deallocating shmems on gpu process restart

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

      No description provided.
Attachment #8802940 - Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/cd05381f28b1
Fix assert deallocating shmems on GPU process restart. (bug 1311715, r=mattwoodrow)
https://hg.mozilla.org/mozilla-central/rev/cd05381f28b1
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: