Fix assert deallocating shmems on GPU process restart. (bug 1311715, r=mattwoodrow)